# gas

./: .gas.yaml  README.md  pyproject.toml
src/gas/: cli.py
src/gas/commands/: commit.py  config.py  explain.py
src/gas/core/: ai.py  config.py  git.py
src/tests/: conftest.py  test_config.py  test_prompts.py
